# CyRxnOpt

./: .buildinfo  .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  authors.html  changelog.html  contributing.html  genindex.html  glossary.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  supported_algorithms.html  tox.ini
.github/workflows/: ci.yml  gh_pages.yml  unit_testing.yml
Amlro_example/: full_combo_file.txt  training_combo_file.txt  training_set_decoded_file.txt  training_set_file.txt
_downloads/784fbb04446606d5e6558af92638cb62/: OptimizerTemplate.py
_modules/: index.html
_modules/cyrxnopt/: NestedVenv.html  OptimizerABC.html  OptimizerAmlro.html  OptimizerController.html  OptimizerEDBOp.html  OptimizerNMSimplex.html  OptimizerSQSnobFit.html
_sources/: glossary.rst.txt
_sources/api/: cyrxnopt.rst.txt  cyrxnopt.utilities.config.rst.txt  cyrxnopt.utilities.rst.txt  modules.rst.txt
_sources/developer/: index.rst.txt
_static/: documentation_options.js
api/: cyrxnopt.html  cyrxnopt.utilities.config.html  cyrxnopt.utilities.html  modules.html
developer/: architecture.html  index.html
developer/getting_started/: code_conventions.html  contributing_code.html  development_environment.html  index.html  project_structure.html  testing_code.html  viewing_documentation.html  (+1 more)
docs/: README.rst  conf.py  index.rst
overview/: index.html  installation.html  introduction.html
src/: ExampleAmlro.py  OptimizerABC.py  OptimizerAmlro.py  VenvManager  VenvManager.py  optimizer_abc.py  optimizer_amlro.py  venv_manager
tests/: conftest.py  test_NestedVenv.py  test_OptimizerAmlro.py  test_OptimizerEDBOp.py  test_VenvManager.py  test_skeleton.py
(+80 files in other folders)
